chore: adjust padding in markdown cells

--- a/PythonBasicsTutorial.ipynb
+++ b/PythonBasicsTutorial.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "### 1. Introduction to Python\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The **'print'** function in Python displays any given message, such as text, numbers, or the result of an expression, on the screen."
+    "The **'print'** function in Python displays any given message, such as text, numbers, or the result of an expression, on the screen."
    ]
   },
   {
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.1 Creating a variable"
+    "#### 2.1 Creating a variable"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.2 Numbers and arithmetic operations"
+    "#### 2.2 Numbers and arithmetic operations"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.1 List: a collection of items"
+    "#### 3.1 List: a collection of items"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.2 Dictionary: key-value pairs"
+    "#### 3.2 Dictionary: key-value pairs"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4.1 Using an if statement"
+    "#### 4.1 Using an if statement"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4.2 Using a **'for'** loop and a **'while'** loop for repetition."
+    "#### 4.2 Using a **'for'** loop and a **'while'** loop for repetition."
    ]
   },
   {
@@ -339,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5.1 Defining a simple function"
+    "#### 5.1 Defining a simple function"
    ]
   },
   {
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5.2 Calling the function"
+    "##### 5.2 Calling the function"
    ]
   },
   {
