--- a/PythonBasicsTutorial.ipynb
+++ b/PythonBasicsTutorial.ipynb
@@ -375,6 +375,114 @@
    "source": [
     "print(greet('Neda'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Practice Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 6.1 Basic Arithmetic Calculator\n",
+    "Create a basic calculator to add, subtract, multiply, and divide two numbers, which lets users enter two numbers and choose an operation.\n",
+    "\n",
+    "**Instructions:**\n",
+    "- Prompt the user to input 2 numbers.\n",
+    "- Prompt the user to input an operation (e.g., +, -, *, /).\n",
+    "- Perform the chosen operation on these numbers.\n",
+    "- Display the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: -10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get user input\n",
+    "num1 = float(input(\"Enter first number: \"))\n",
+    "num2 = float(input(\"Enter second number: \"))\n",
+    "operation = input(\"Choose an operation (+, -, *, /): \")\n",
+    "\n",
+    "# Perform calculation\n",
+    "if operation == '+':\n",
+    "  result = num1 + num2\n",
+    "elif operation == '-':\n",
+    "  result = num1 - num2\n",
+    "elif operation == '*':\n",
+    "  result = num1 * num2\n",
+    "elif operation == '/':\n",
+    "  result = num1 / num2\n",
+    "else:\n",
+    "  result = \"Invalid operation\"\n",
+    "\n",
+    "print(\"Result:\", result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 6.2 Guess The Number Game\n",
+    "Create a game where the program selects a random number, and the user tries to guess it. The game will let the user know if each guess is too high, too low, or correct.\n",
+    "\n",
+    "**Instructions:**\n",
+    "- The program randomly selects a number between 1 and 100.\n",
+    "- Prompt the user to input a guess number.\n",
+    "- The program gives feedback: too high, too low, or correct.\n",
+    "- The program stops once the user guesses numbers 5 times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too low.\n",
+      "Too high.\n",
+      "Too high.\n",
+      "Too high.\n",
+      "Too high.\n",
+      "Sorry, you've reached the guess limit. The number was 32.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Generate a random number\n",
+    "target_number = random.randint(1, 100)\n",
+    "guess_limit = 5\n",
+    "\n",
+    "for _ in range(guess_limit):\n",
+    "  guess = int(input(\"Guess a number between 1 and 100: \"))\n",
+    "    \n",
+    "  if guess < target_number:\n",
+    "    print(\"Too low.\")\n",
+    "  elif guess > target_number:\n",
+    "    print(\"Too high.\")\n",
+    "  else:\n",
+    "    print(\"Congratulations! You guessed it right!\")\n",
+    "    break\n",
+    "else:\n",
+    "  print(f\"Sorry, you've reached the guess limit. The number was {target_number}.\")"
+   ]
   }
  ],
  "metadata": {
