refactor: add a use_local_file to choose between using a local file or a file from a GitHub URL

--- a/DataAnalyticsBasicsTutorial.ipynb
+++ b/DataAnalyticsBasicsTutorial.ipynb
@@ -24,11 +24,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Flag to determine the source of the file\n",
+    "use_local_file = False # Change to True if you want to use a local file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
-    "# Import data from a CSV file\n",
-    "df = pd.read_csv('sample_data.csv')\n",
-    "\n",
+    "if use_local_file:\n",
+    "  # Import file from a local file\n",
+    "  df = pd.read_csv('sample_data.csv')\n",
+    "else:\n",
+    "  # Import file from GitHub raw URL\n",
+    "  url = 'https://raw.githubusercontent.com/peyrone/PyAirPollution/main/sample_data.csv'\n",
+    "  df = pd.read_csv(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Add a 'Salary' column\n",
     "df['Salary'] = [70000, 80000, 90000]\n",
     "\n",
