--- a/PyAirPollutionDataAnalysis.ipynb
+++ b/PyAirPollutionDataAnalysis.ipynb
@@ -50,6 +50,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Flag to determine the source of the file\n",
+    "use_local_file = False # Change to True if you want to use a local file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "if use_local_file:\n",
+    "  # Import file from a local file\n",
+    "  df = pd.read_csv('sample_data.csv')\n",
+    "else:\n",
+    "  # Import file from GitHub raw URL\n",
+    "  url = 'https://raw.githubusercontent.com/peyrone/PyAirPollution/main/annual_aqi_by_county_2023.csv'\n",
+    "  df = pd.read_csv(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
     "# Load the dataset\n",
