refactor: add a script to enable interactive plotting

--- a/DataAnalyticsBasicsTutorial.ipynb
+++ b/DataAnalyticsBasicsTutorial.ipynb
@@ -203,6 +203,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Enable interactive plots\n",
+    "%matplotlib notebook\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Generate a sine wave\n",
@@ -246,7 +249,7 @@
     "# Create animation\n",
     "ani = animation.FuncAnimation(fig, animate, interval=50, blit=True)\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -268,6 +271,7 @@
     "line, = ax.plot(x, y)\n",
     "\n",
     "def onclick(event):\n",
+    "  if event.xdata is not None:  # Check if the click is within the axes\n",
     "    y = np.sin(x + event.xdata)\n",
     "    line.set_ydata(y)\n",
     "    fig.canvas.draw()\n",
