--- a/PyAirPollutionDataAnalysis.ipynb
+++ b/PyAirPollutionDataAnalysis.ipynb
@@ -250,6 +250,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Enable interactive plots\n",
+    "%matplotlib notebook\n",
+    "\n",
     "# Heatmap of Correlation Matrix\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
