refactor: import the CSV file functionality

--- a/DataAnalyticsBasicsTutorial.ipynb
+++ b/DataAnalyticsBasicsTutorial.ipynb
@@ -24,8 +24,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Install a pip package in the current Jupyter kernel\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install python-magic\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Flag to determine the source of the file\n",
-    "use_local_file = False # Change to True if you want to use a local file"
+    "use_local_file = True # Change to True if you want to use a local file"
    ]
   },
   {
@@ -232,6 +243,8 @@
    "source": [
     "from IPython.display import Image\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib.animation import PillowWriter\n",
+    "\n",
     "\n",
     "# Generating sine wave data\n",
     "x = np.linspace(0, 2*np.pi, 100)\n",
@@ -248,10 +261,9 @@
     "ani = animation.FuncAnimation(fig, animate, interval=50, blit=False)\n",
     "\n",
     "# Save the animation as a GIF\n",
-    "ani.save(\"Sine_Wave_Motion.gif\", writer='imagemagick' or 'ffmpeg')\n",
+    "ani.save(\"Sine_Wave_Motion.gif\", writer=PillowWriter(fps=30))\n",
     "\n",
-    "# Display the GIF in the notebook\n",
-    "Image(filename=\"Sine_Wave_Motion.gif\")"
+    "Image(filename=\"Sine_Wave_Motion.gif\")\n"
    ]
   },
   {
@@ -308,16 +320,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
+    "# Create a list of columns where zero is not a valid value\n",
+    "valid_value_columns = ['plas', 'pres', 'skin', 'insu', 'mass']\n",
     "\n",
-    "# Set a higher recursion depth limit\n",
-    "sys.setrecursionlimit(3000)  # Be cautious with the value\n",
+    "# Replace zeros with NaN in the specified columns\n",
+    "for col in valid_value_columns:\n",
+    "    df[col] = df[col].replace(0, np.nan)\n",
     "\n",
-    "# Replace zeros with NaN in columns where zero is not a valid value\n",
-    "for col in ['plas', 'pres', 'skin', 'insu', 'mass']:\n",
-    "  df[col].replace(0, pd.NA, inplace=True)\n",
-    "\n",
-    "# Fill missing values with mean of the column\n",
+    "# Fill missing values with the mean of each column\n",
     "df.fillna(df.mean(), inplace=True)"
    ]
   },
