--- a/PyAirPollutionDataAnalysis.ipynb
+++ b/PyAirPollutionDataAnalysis.ipynb
@@ -64,24 +64,11 @@
     "\n",
     "if use_local_file:\n",
     "  # Import file from a local file\n",
-    "  df = pd.read_csv('sample_data.csv')\n",
+    "  epa_data = pd.read_csv('annual_aqi_by_county_2023.csv')\n",
     "else:\n",
     "  # Import file from GitHub raw URL\n",
     "  url = 'https://raw.githubusercontent.com/peyrone/PyAirPollution/main/annual_aqi_by_county_2023.csv'\n",
-    "  df = pd.read_csv(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Load the dataset\n",
-    "epa_data = pd.read_csv('annual_aqi_by_county_2023.csv')\n",
-    "print(epa_data.head())"
+    "  epa_data = pd.read_csv(url)"
    ]
   },
   {
