refactor: clear all Jupyter Notebook output

--- a/DataAnalyticsBasicsTutorial.ipynb
+++ b/DataAnalyticsBasicsTutorial.ipynb
@@ -24,19 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install a pip package in the current Jupyter kernel\n",
-    "import sys\n",
-    "!{sys.executable} -m pip install python-magic\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Flag to determine the source of the file\n",
-    "use_local_file = True # Change to True if you want to use a local file"
+    "use_local_file = False # Change to True if you want to use a local file"
    ]
   },
   {
@@ -258,7 +247,7 @@
     "  return line,\n",
     "\n",
     "# Create animation\n",
-    "ani = animation.FuncAnimation(fig, animate, interval=50, blit=False)\n",
+    "ani = animation.FuncAnimation(fig, animate, interval=50, blit=True)\n",
     "\n",
     "# Save the animation as a GIF\n",
     "ani.save(\"Sine_Wave_Motion.gif\", writer=PillowWriter(fps=30))\n",
