--- a/PyAirPollutionDataAnalysis.ipynb
+++ b/PyAirPollutionDataAnalysis.ipynb
@@ -148,6 +148,7 @@
    "outputs": [],
    "source": [
     "# Example using Z-score\n",
+    "# Z-scores measure how many standard deviations (sd) a data point is away from the average (mean) of a dataset\n",
     "from scipy import stats\n",
     "z_scores = stats.zscore(epa_data['Good Days'])\n",
     "\n",
