refactor: update code for higher Python version compatibility

--- a/PyAirPollutionDataAnalysis.ipynb
+++ b/PyAirPollutionDataAnalysis.ipynb
@@ -194,8 +194,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# Correlation Analysis\n",
-    "correlation_matrix = epa_data.corr()\n",
+    "numeric_cols = epa_data.select_dtypes(include=np.number)\n",
+    "correlation_matrix = numeric_cols.corr()\n",
     "print(\"\\nCorrelation Matrix:\\n\", correlation_matrix)"
    ]
   },
