--- a/DataAnalyticsBasicsTutorial.ipynb
+++ b/DataAnalyticsBasicsTutorial.ipynb
@@ -24,6 +24,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Install a pip package in the current Jupyter kernel\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install pandas numpy scikit-learn scipy matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Flag to determine the source of the file\n",
     "use_local_file = False # Change to True if you want to use a local file"
    ]
@@ -97,8 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# Convert daily data to monthly averages by resampling\n",
-    "monthly_resampled_data = df.resample('M').mean()\n",
+    "numeric_cols = df.select_dtypes(include=np.number)\n",
+    "monthly_resampled_data = numeric_cols.resample('M').mean()\n",
     "\n",
     "# Filter the DataFrame based on a time period (e.g., after January 2021)\n",
     "filtered_df = df[df.index > pd.to_datetime('2021-01-01')]\n",
@@ -122,8 +136,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "# Create a 2D array (3x3 matrix)\n",
     "array_2d = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
     "\n",
@@ -234,7 +246,6 @@
     "import matplotlib.animation as animation\n",
     "from matplotlib.animation import PillowWriter\n",
     "\n",
-    "\n",
     "# Generating sine wave data\n",
     "x = np.linspace(0, 2*np.pi, 100)\n",
     "y = np.sin(x)\n",
@@ -247,7 +258,7 @@
     "  return line,\n",
     "\n",
     "# Create animation\n",
-    "ani = animation.FuncAnimation(fig, animate, interval=50, blit=True)\n",
+    "ani = animation.FuncAnimation(fig, animate, frames=200, interval=50, blit=True)\n",
     "\n",
     "# Save the animation as a GIF\n",
     "ani.save(\"Sine_Wave_Motion.gif\", writer=PillowWriter(fps=30))\n",
@@ -314,10 +325,11 @@
     "\n",
     "# Replace zeros with NaN in the specified columns\n",
     "for col in valid_value_columns:\n",
-    "    df[col] = df[col].replace(0, np.nan)\n",
+    "  df[col] = df[col].replace(0, np.nan)\n",
     "\n",
     "# Fill missing values with the mean of each column\n",
-    "df.fillna(df.mean(), inplace=True)"
+    "numeric_cols = df.select_dtypes(include=np.number)\n",
+    "df.fillna(numeric_cols.mean(), inplace=True)"
    ]
   },
   {
@@ -380,7 +392,8 @@
    "outputs": [],
    "source": [
     "# Correlation Analysis\n",
-    "correlation_matrix = df.corr()\n",
+    "numeric_cols = df.select_dtypes(include=np.number)\n",
+    "correlation_matrix = numeric_cols.corr()\n",
     "print(\"\\nCorrelation Matrix:\\n\", correlation_matrix)"
    ]
   },
