--- a/PyAirPollutionDataAnalysis.ipynb
+++ b/PyAirPollutionDataAnalysis.ipynb
@@ -50,6 +50,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Install a pip package in the current Jupyter kernel\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install pandas numpy scikit-learn scipy matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Flag to determine the source of the file\n",
     "use_local_file = False # Change to True if you want to use a local file"
    ]
