--- a/DataAnalyticsBasicsTutorial.ipynb
+++ b/DataAnalyticsBasicsTutorial.ipynb
@@ -45,6 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
     "import pandas as pd\n",
     "\n",
     "if use_local_file:\n",
@@ -108,6 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
     "import numpy as np\n",
     "\n",
     "# Convert daily data to monthly averages by resampling\n",
@@ -215,6 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Generate a sine wave\n",
@@ -242,6 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
     "from IPython.display import Image\n",
     "import matplotlib.animation as animation\n",
     "from matplotlib.animation import PillowWriter\n",
