docs: add documentation in Jupyter Notebooks

--- a/DLBasicsTutorial.ipynb
+++ b/DLBasicsTutorial.ipynb
@@ -13,7 +13,13 @@
    "source": [
     "### Example 4: Handwritten Digit Recognition\n",
     "\n",
-    "**Objective:** Recognize and classify handwritten digits from 0 to 9."
+    "- **Objective:** Recognize and classify handwritten digits from 0 to 9.\n",
+    "- **Dataset:** The digits dataset includes:\n",
+    "  - **data:** Flattened arrays (64 values each) representing the pixel values of digit images.\n",
+    "  - **target:** Labels for each image, indicating which digit (0-9) it represents.\n",
+    "  - **images:** The digit images in their original 8x8 format.\n",
+    "  - **target_names:** Array of digit labels (0-9).\n",
+    "  - **DESCR:** A brief description of the dataset."
    ]
   },
   {
@@ -64,6 +70,14 @@
    "source": [
     "# Split data\n",
     "X_train, X_test, y_train, y_test = train_test_split(digits.data, digits.target, test_size=0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **svm.SVC():** This is the constructor for a Support Vector Machine (SVM) classifier in scikit-learn. \n",
+    "- **gamma=0.001** in an SVM classifier creates a broader and simpler decision boundary, leading to better generalization when classifying new, unseen data."
    ]
   },
   {
@@ -138,7 +152,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.2 Using Convolutional Neural Network (CNN)"
+    "#### 4.2 Using Convolutional Neural Network (CNN)\n",
+    "\n",
+    "- **Dataset:** The MNIST dataset includes:\n",
+    "  - **train_images:** These are the images used for training the model. Each image is a 28x28 pixel grayscale representation of a handwritten digit (0-9).\n",
+    "  - **train_labels:** These are the labels corresponding to train_images. Each label is an integer between 0 and 9, whichc indicates the actual digit the image represents.\n",
+    "  - **test_images:** Similar to train_images, these images are used for testing the model. They are also 28x28 pixel grayscale images of handwritten digits.\n",
+    "  - **test_labels:** These labels correspond to test_images and are used to evaluate the model's performance. They are integers from 0 to 9, which represents the digit in the corresponding image.\n"
    ]
   },
   {
@@ -180,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Normalize pixel values\n",
+    "# Normalize pixel values: This code rescales pixel values in train_images and test_images to the range of 0 to 1.\n",
     "train_images, test_images = train_images / 255.0, test_images / 255.0"
    ]
   },
@@ -190,9 +210,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add a channels dimension\n",
+    "# Add a channels dimension to image data for handling color channels in TensorFlow.\n",
     "train_images = train_images[..., tf.newaxis]\n",
     "test_images = test_images[..., tf.newaxis]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The size of the images at each convolutional layer along with the ReLU activation:**\n",
+    "\n",
+    "- **First Convolutional Layer:**\n",
+    "  - **Input Size:** 28x28x1 (Height x Width x Channels)\n",
+    "  - **Number of Filters:** 32\n",
+    "  - **Convolutional Kernel Size:** 3x3\n",
+    "  - **Activation:** ReLU\n",
+    "  - **Output:** Approximately 26x26x32\n",
+    "- **Max-Pooling Layer:**\n",
+    "  - **Pooling Window Size:** 2x2\n",
+    "  - **Output:** Approximately 13x13x32\n",
+    "- **Second Convolutional Layer:**\n",
+    "  - **Input:** 13x13x32\n",
+    "  - **Filters:** 64\n",
+    "  - **Kernel Size:** 3x3\n",
+    "  - **Activation:** ReLU\n",
+    "  - **Output:** Approximately 11x11x64\n",
+    "- **Max-Pooling Layer:**\n",
+    "  - **Pooling Size:** 2x2\n",
+    "  - **Output:** Approximately 5x5x64\n",
+    "- **Third Convolutional Layer:**\n",
+    "  - **Input:** 5x5x64\n",
+    "  - **Filters:** 64\n",
+    "  - **Kernel Size:** 3x3\n",
+    "  - **Activation:** ReLU\n",
+    "  - **Output:** Approximately 3x3x64"
    ]
   },
   {
@@ -277,9 +329,9 @@
    "outputs": [],
    "source": [
     "# Visualize the first 5 images and their predicted labels\n",
-    "plt.figure(figsize=(10,10))\n",
+    "plt.figure(figsize=(10, 10))\n",
     "for i in range(5):\n",
-    "  plt.subplot(1,5,i+1)\n",
+    "  plt.subplot(1, 5, i+1)\n",
     "  plt.xticks([])\n",
     "  plt.yticks([])\n",
     "  plt.grid(False)\n",
@@ -292,9 +344,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 5: Handwritten Digit Recognition\n",
+    "### Example 5: Image Classification with CIFAR-10\n",
     "\n",
-    "**Objective:** Recognize and classify handwritten digits from 0 to 9."
+    "- **Objective:** Classify images into one of ten categories like airplanes, cars, birds, etc.\n",
+    "- **Dataset:** The CIFAR-10 dataset includes:\n",
+    "  - **train_images:** These are the training images, each measuring 32x32 pixels. They represent various objects in 10 different classes.\n",
+    "  - **train_labels:** These labels correspond to the training images and specify the category (class) to which each image belongs. There are 10 possible class labels.\n",
+    "  - **test_images:** Similar to train_images, these are the test images used to evaluate the model's performance. They are also 32x32-pixel images.\n",
+    "  - **test_labels:** These labels match the test_images and indicate the class for each test image. They are used to assess the accuracy of the model's predictions."
    ]
   },
   {
