--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -13,7 +13,15 @@
    "source": [
     "### Example 1: Basic Classification with Iris Dataset\n",
     "\n",
-    "**Objective:** Classify iris flowers (ดอกไอริส) into three species using petal (กลีบดอก) and sepal (กลีบเลี้ยง) measurements."
+    "- **Objective:** Classify iris flowers (ดอกไอริส) into three species using sepal (กลีบเลี้ยง) and petal (กลีบดอก) measurements.\n",
+    "- **Dataset:** The Iris dataset includes four features and a target for three species of Iris flowers:\n",
+    "  - **Features (X):**\n",
+    "    - Sepal Length (cm)\n",
+    "    - Sepal Width (cm)\n",
+    "    - Petal Length (cm)\n",
+    "    - Petal Width (cm)\n",
+    "  - **Target (y):**\n",
+    "    - Species of Iris (0 for Setosa, 1 for Versicolour, 2 for Virginica)"
    ]
   },
   {
@@ -55,6 +63,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **sns.pairplot(...)**: It is used to visualize the relationships between pairs of dataset features, which reveals how they are related to each other.\n",
+    "- **diag_kind=\"kde\"**: This optional parameter sets diagonal plots to kernel density estimates (kde), which shows data distribution as a smooth curve."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -76,6 +92,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **solver='saga':** The **'solver'** parameter used for optimization when fitting the logistic regression model, set to **'saga'** here, is effective for large datasets in Python's scikit-learn library.\n",
+    "- **max_iter=2000:** This parameter sets the maximum number of iterations (or epochs) for the optimization algorithm. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -83,6 +107,7 @@
    "source": [
     "# Create a model and train\n",
     "model = LogisticRegression(solver='saga', max_iter=2000)  # Using a different solver\n",
+    "# Train the logistic regression model using labeled data\n",
     "model.fit(X_train, y_train)"
    ]
   },
@@ -95,6 +120,13 @@
     "# Predict and evaluate\n",
     "predictions = model.predict(X_test)\n",
     "print(\"Accuracy:\", accuracy_score(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **confusion_matrix(...)**: This function creates a heatmap with Seaborn to compare actual and predicted values from a model's predictions."
    ]
   },
   {
@@ -117,7 +149,13 @@
    "source": [
     "### Example 2: Sentiment Analysis with IMDb Reviews\n",
     "\n",
-    "**Objective:** Determine whether movie reviews are positive or negative using text data."
+    "- **Objective:** Determine whether movie reviews are positive or negative using text data.\n",
+    "- **Dataset:** The IMDB dataset in TensorFlow's Keras includes:\n",
+    "  - **Reviews (Text Data):**\n",
+    "    - Every review is a sequence of word indices that correspond to the words used in the review text.\n",
+    "    - The words are indexed by their overall frequency in the dataset. For example, the integer \"3\" represents the 3rd most frequent word.\n",
+    "  - **Labels (Binary):**\n",
+    "    - Every review is categorized as either 0, representing a negative sentiment, or 1, representing a positive sentiment."
    ]
   },
   {
@@ -147,6 +185,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **imdb.load_data(...):** Load the dataset, which stores training and test data with their respective labels, limited to 10,000 unique words."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -154,6 +199,21 @@
    "source": [
     "# Load dataset\n",
     "(train_data, train_labels), (test_data, test_labels) = imdb.load_data(num_words=10000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Padding in natural language processing (NLP) and sequence-based tasks serves several purposes:** \n",
+    "  - **Fixed Input Length:** The padding ensures that all input sequences are the same length, which makes it possible to process them in batches efficiently.\n",
+    "  - **Batch Processing:** By standardizing sequence lengths in a batch, padding supports parallel processing and optimizes GPU use.\n",
+    "  - **Model Compatibility:** It enables compatibility with neural networks, such as RNNs, LSTMs, and CNNs that need fixed-length inputs.\n",
+    "  - **Prevents Data Loss:** Padding avoids truncating longer sequences, which might lose important information.\n",
+    "  - **Facilitates Embeddings:** In deep learning, fixed-length sequences streamline the creation of consistent-dimensional embeddings for text tokens.\n",
+    "\n",
+    "\n",
+    "- **tf.keras.preprocessing.sequence.pad_sequences:** To prepare the data, both the training and testing datasets are padded using a sequence length of 256, and any missing values are filled with zeros."
    ]
   },
   {
@@ -165,6 +225,20 @@
     "# Data preprocessing\n",
     "train_data = tf.keras.preprocessing.sequence.pad_sequences(train_data, value=0, padding='post', maxlen=256)\n",
     "test_data = tf.keras.preprocessing.sequence.pad_sequences(test_data, value=0, padding='post', maxlen=256)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **The model is constructed with:**\n",
+    "  - An embedding layer (input vocabulary: 10,000, embedding size: 16).\n",
+    "  - A global average pooling layer to reduce the sequence dimension.\n",
+    "  - A 16-unit dense layer with ReLU activation.\n",
+    "  - A single-unit dense layer with sigmoid activation for binary classification.\n",
+    "\n",
+    "- As for training, it is configured with the **'adam'** optimizer, using **'binary_crossentropy'** as the loss function, and tracking **'accuracy'** as a performance metric.\n",
+    "- The **ReLU (Rectified Linear Unit)** activation function is used. It outputs the input value if it's positive, and zero if it's negative This introduces non-linearity to the model and helps in mitigating gradient vanishing issues."
    ]
   },
   {
@@ -247,6 +321,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The **Receiver Operating Characteristic (ROC)** curve is created using predictions, which leads to two key metrics: False Positive Rate (FPR) and True Positive Rate (TPR). From these, the Area Under the Curve (AUC) is calculated."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -282,7 +363,13 @@
    "source": [
     "### Example 3: Customer Segmentation with Mall Customer Data\n",
     "\n",
-    "**Objective:** Segment customers based on their spending patterns and characteristics."
+    "- **Objective:** Segment customers based on their spending patterns and characteristics.\n",
+    "- **Dataset:** Mall Customer Segmentation Data (available on Kaggle), which contains the following fields:\n",
+    "  - **CustomerID:** A unique identifier for each customer.\n",
+    "  - **Gender:** The gender of the customer (e.g., Male, Female).\n",
+    "  - **Age:** The age of the customer.\n",
+    "  - **Annual Income (k$):** The customer's annual income in thousands of dollars.\n",
+    "  - **Spending Score (1-100):** A score assigned to the customer based on their spending behavior and purchasing data. This score is on a scale from 1 to 100."
    ]
   },
   {
@@ -316,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select features\n",
+    "# Selects specific columns (income and spending score) for clustering.\n",
     "X = df.iloc[:, [1, 2]].values"
    ]
   },
