--- a/DLBasicsTutorial.ipynb
+++ b/DLBasicsTutorial.ipynb
@@ -46,6 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
     "from sklearn import datasets, svm, metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
