feat: add the Python code for addressing Question 3

--- a/PreviousClassQuestionsAnswers.ipynb
+++ b/PreviousClassQuestionsAnswers.ipynb
@@ -82,6 +82,7 @@
    "outputs": [],
    "source": [
     "# Importing libraries\n",
+    "import csv\n",
     "import requests\n",
     "from bs4 import BeautifulSoup"
    ]
@@ -127,11 +128,104 @@
     "  # Extract authors with itemprop=\"name\"\n",
     "  authors = soup.find_all(attrs={\"itemprop\": \"name\"})\n",
     "\n",
-    "  # Iterate through book titles and authors and print them together\n",
-    "  for book_title, author in zip(book_titles, authors):\n",
-    "    print(f\"Book Title: {book_title}, Author: {author.get_text()}\")\n",
+    "  # Check if the number of book titles matches the number of authors\n",
+    "  if len(book_titles) == len(authors):\n",
+    "    # Create a list of dictionaries with book information\n",
+    "    books_info = [{\"Book Title\": title, \"Author\": author.get_text()} for title, author in zip(book_titles, authors)]\n",
+    "\n",
+    "    # Specify the CSV file name\n",
+    "    csv_file_name = 'books.csv'\n",
+    "\n",
+    "    # Write the extracted data to a CSV file\n",
+    "    with open(csv_file_name, 'w', newline='') as csv_file:\n",
+    "      fieldnames = [\"Book Title\", \"Author\"]\n",
+    "      writer = csv.DictWriter(csv_file, fieldnames=fieldnames)\n",
+    "            \n",
+    "      # Write the header row\n",
+    "      writer.writeheader()\n",
+    "            \n",
+    "      # Write book information\n",
+    "      writer.writerows(books_info)\n",
+    "\n",
+    "      print(f\"Data written to {csv_file_name}\")\n",
+    "  else:\n",
+    "    print(\"Number of book titles does not match the number of authors.\")\n",
     "else:\n",
     "  print(f\"Failed to fetch the webpage. Status code: {response.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3: How can I calculate the correlation between two variables with different timestamps in Python?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example data\n",
+    "timestamps1 = pd.date_range(start=\"2023-01-01\", periods=10, freq=\"D\")\n",
+    "data1 = np.random.rand(10)\n",
+    "\n",
+    "timestamps2 = pd.date_range(start=\"2023-01-05\", periods=10, freq=\"D\")\n",
+    "data2 = np.random.rand(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create DataFrames\n",
+    "df1 = pd.DataFrame(data1, index=timestamps1, columns=[\"Variable1\"])\n",
+    "df2 = pd.DataFrame(data2, index=timestamps2, columns=[\"Variable2\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Resample and forward-fill missing values to align the data\n",
+    "df1_resampled = df1.resample(\"D\").ffill()\n",
+    "df2_resampled = df2.resample(\"D\").ffill()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the correlation\n",
+    "correlation = df1_resampled[\"Variable1\"].corr(df2_resampled[\"Variable2\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Correlation between Variable1 and Variable2:\")\n",
+    "print(correlation)"
    ]
   }
  ],
