--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -11,6 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# In machine learning, especially for binary classification, select metrics based on your specific problem:\n",
+    "- **Accuracy:** Good for balanced datasets.\n",
+    "- **Precision:** When avoiding false positives is important.\n",
+    "- **Recall:** Crucial when missing true positives is costly.\n",
+    "- **F1-Score:** Balances precision and recall, useful for uneven class distributions.\n",
+    "- **AUC:** Evaluates performance across various thresholds, suitable for overall assessment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Example 1: Basic Classification with Iris Dataset\n",
     "\n",
     "- **Objective:** Classify iris flowers (ดอกไอริส) into three species using sepal (กลีบเลี้ยง) and petal (กลีบดอก) measurements.\n",
