docs: add documentation in the Jupyter Notebook

--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# In machine learning, especially for binary classification, select metrics based on your specific problem:\n",
+    "### In machine learning, especially for binary classification, select metrics based on your specific problem:\n",
     "- **Accuracy:** Good for balanced datasets.\n",
     "- **Precision:** When avoiding false positives is important.\n",
     "- **Recall:** Crucial when missing true positives is costly.\n",
     "- **F1-Score:** Balances precision and recall, useful for uneven class distributions.\n",
-    "- **AUC:** Evaluates performance across various thresholds, suitable for overall assessment."
+    "- **The area under the Receiver Operating Characteristic curve (AUC):** Evaluates performance across various thresholds, suitable for overall assessment."
    ]
   },
   {
