fix: modify the dataset's path

--- a/MLDLAssignments.ipynb
+++ b/MLDLAssignments.ipynb
@@ -81,8 +81,8 @@
    "outputs": [],
    "source": [
     "# Load the datasets\n",
-    "train_data = pd.read_csv('Titanic/titanic_train.csv')\n",
-    "test_data = pd.read_csv('Titanic/titanic_test.csv')"
+    "train_data = pd.read_csv('TitanicData/titanic_train.csv')\n",
+    "test_data = pd.read_csv('TitanicData/titanic_test.csv')"
    ]
   },
   {
