fix: wrong specific columns

--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -214,6 +214,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data[0]\n",
+    "len(train_data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(test_labels)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,6 +259,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_index = imdb.get_word_index()  # get {word: index}\n",
+    "\n",
+    "# Offset by 3 as 0, 1, and 2 are reserved indices for \"padding\", \"start of sequence\", and \"unknown\"\n",
+    "index_word = {v + 3: k for k, v in word_index.items()}\n",
+    "\n",
+    "# The first index is 1 for \"start of sequence\". Also add the reserved words to the dictionary.\n",
+    "index_word[0] = '<PAD>'\n",
+    "index_word[1] = '<START>'\n",
+    "index_word[2] = '<UNK>'\n",
+    "\n",
+    "index = 0\n",
+    "print(\" \".join([index_word.get(idx, '?') for idx in train_data[index]]))\n",
+    "print(\"positive\" if train_labels[index] == 1 else \"negative\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_word"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -262,9 +320,10 @@
     "# Build the model\n",
     "model = Sequential([\n",
     "  Embedding(10000, 16),\n",
+    "  # It simply compresses the sequence of data into a single vector (per sample) by averaging.\n",
     "  GlobalAveragePooling1D(),\n",
-    "  Dense(16, activation='relu'),\n",
-    "  Dense(1, activation='sigmoid')\n",
+    "  Dense(16, activation='relu'),  # 2 Hidden Layers\n",
+    "  Dense(1, activation='sigmoid') # 1 Output Layer\n",
     "])\n",
     "\n",
     "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
@@ -415,8 +474,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selects specific columns (income and spending score) for clustering.\n",
-    "X = df.iloc[:, [1, 2]].values"
+    "# Selects specific columns (annual income and spending score) for clustering.\n",
+    "X = df.iloc[:, [2, 3]].values"
    ]
   },
   {
