--- a/MLDLAssignments.ipynb
+++ b/MLDLAssignments.ipynb
@@ -30,9 +30,10 @@
     "  - **Embarked:** Where the passenger got on the ship (C = Cherbourg, Q = Queenstown, S = Southampton).\n",
     "- **Tasks:**\n",
     "  - Load the dataset and perform exploratory data analysis.\n",
-    "  - **Preprocess the data: handle missing values, convert categorical data to numerical, etc.**\n",
     "  - Split the data into training and testing sets.\n",
+    "  - **Preprocess the data: handle missing values, convert categorical data to numerical, etc.**\n",
     "  - Build a logistic regression model to predict survival.\n",
+    "  - Create a submission file containing the **'PassengerId'** and **'Survived'** columns with the test predictions and save it to a CSV file.\n",
     "  - Evaluate the model's performance using accuracy, precision, and recall metrics.\n",
     "- **Hints:**\n",
     "  - Pay attention to columns, such as **'Age'**, **'Sex'**, **'Pclass'**, and **'Fare'**.\n",
@@ -65,13 +66,14 @@
    "source": [
     "# Importing libraries\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, precision_recall_curve, auc"
    ]
   },
   {
@@ -91,20 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preprocess the data\n",
-    "# TODO: Handle missing values, convert categorical data to numerical\n",
-    "# Example: data['Age'].fillna(data['Age'].mean(), inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Select features and target variable\n",
-    "# Example: X = data[['Pclass', 'Age']]\n",
-    "# Example: y = data['Survived']"
+    "# Define numeric and categorical features\n",
+    "numeric_features = ['Age', 'Fare']\n",
+    "categorical_features = ['Sex', 'Embarked', 'Pclass']"
    ]
   },
   {
@@ -138,14 +129,14 @@
     "  ('imputer', SimpleImputer(strategy='median')),\n",
     "  ('scaler', StandardScaler())])\n",
     "\n",
-    "category_transformer = Pipeline(steps=[\n",
+    "categorical_transformer = Pipeline(steps=[\n",
     "  ('imputer', SimpleImputer(strategy='constant', fill_value='missing')),\n",
     "  ('onehot', OneHotEncoder(handle_unknown='ignore'))])\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
     "  transformers=[\n",
-    "    ('num', numeric_transformer, numeric_transformer),\n",
-    "    ('cat', category_transformer, category_transformer)])\n",
+    "    ('num', numeric_transformer, numeric_features),\n",
+    "    ('cat', categorical_transformer, categorical_features)])\n",
     "\n",
     "X = train_data.drop('Survived', axis=1)\n",
     "y = train_data['Survived']"
@@ -157,8 +148,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "# Split the data into training and validation sets\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the preprocessor to X_train and transform both X_train and X_val\n",
+    "X_train_transformed = preprocessor.fit_transform(X_train)\n",
+    "X_val_transformed = preprocessor.transform(X_val)"
    ]
   },
   {
@@ -169,7 +171,7 @@
    "source": [
     "# Build the logistic regression model\n",
     "model = LogisticRegression()\n",
-    "model.fit(X_train, y_train)"
+    "model.fit(X_train_transformed, y_train)"
    ]
   },
   {
@@ -178,12 +180,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preprocess the test data (use 'transform' not 'fit_transform')\n",
-    "X_test = test_data.drop('PassengerId', axis=1)  # Assuming 'PassengerId' is the only non-feature column\n",
-    "X_test_preprocessed = preprocessor.transform(X_test)\n",
-    "\n",
-    "# Predict on the test data\n",
-    "test_predictions = model.predict(X_test_preprocessed)"
+    "# Make predictions on the validation set\n",
+    "val_predictions = model.predict(X_val_transformed)"
    ]
   },
   {
@@ -192,15 +190,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Predict and evaluate the model\n",
-    "predictions = model.predict(X_test)\n",
-    "accuracy = accuracy_score(y_test, predictions)\n",
-    "precision = precision_score(y_test, predictions)\n",
-    "recall = recall_score(y_test, predictions)\n",
+    "# Evaluate the model's performance on the validation set\n",
+    "accuracy = accuracy_score(y_val, val_predictions)\n",
+    "precision = precision_score(y_val, val_predictions)\n",
+    "recall = recall_score(y_val, val_predictions)\n",
     "\n",
-    "print(f\"Accuracy: {accuracy}\")\n",
-    "print(f\"Precision: {precision}\")\n",
-    "print(f\"Recall: {recall}\")"
+    "print(f'Validation Accuracy: {accuracy}')\n",
+    "print(f'Validation Precision: {precision}')\n",
+    "print(f'Validation Recall: {recall}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocess the test data\n",
+    "X_test = test_data.copy()\n",
+    "X_test_transformed = preprocessor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions on the test data\n",
+    "test_predictions = model.predict(X_test_transformed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the predictions to a CSV file\n",
+    "submission = pd.DataFrame({'PassengerId': test_data['PassengerId'], 'Survived': test_predictions})\n",
+    "submission.to_csv('TitanicData/titanic_predictions.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate and plot the precision-recall curve\n",
+    "probs = model.predict_proba(X_val_transformed)[:, 1]\n",
+    "precision, recall, _ = precision_recall_curve(y_val, probs)\n",
+    "auc_score = auc(recall, precision)\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.plot(recall, precision, marker='.')\n",
+    "plt.xlabel('Recall')\n",
+    "plt.ylabel('Precision')\n",
+    "plt.title(f'Precision-Recall Curve (AUC={auc_score:.2f})')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **An AUC of 0.87 indicates the model is effective at identifying the correct class, with values closer to 1 indicating better performance.**"
    ]
   },
   {
@@ -260,8 +316,10 @@
     "# Importing libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import LSTM, Dense\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -273,7 +331,7 @@
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "data = pd.read_csv('AirQualityUCI.csv', delimiter=';')"
+    "data = pd.read_csv('AirQualityUCI.csv', delimiter=';', parse_dates=['Date'], dayfirst=True)"
    ]
   },
   {
@@ -282,10 +340,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preprocess the data\n",
-    "# TODO: Handle missing values and set the datetime index\n",
-    "# Example: data['Date'] = pd.to_datetime(data['Date'])\n",
-    "# data.set_index('Date', inplace=True)"
+    "# Remove \"Unnamed\" columns\n",
+    "data = data.loc[:, ~data.columns.str.contains('^Unnamed')]\n",
+    "\n",
+    "# Remove rows where \"NO2(GT)\" column is less than 0\n",
+    "data = data[data['NO2(GT)'] >= 0]\n",
+    "\n",
+    "# Handle missing values and set the datetime index\n",
+    "data['Date'] = pd.to_datetime(data['Date'])\n",
+    "data.set_index('Date', inplace=True)\n",
+    "data.dropna(inplace=True)"
    ]
   },
   {
@@ -366,12 +430,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create and fit the LSTM network\n",
+    "# Create and fit the LSTM network with Dropout\n",
     "model = Sequential()\n",
     "model.add(LSTM(50, input_shape=(1, look_back)))\n",
     "model.add(Dense(1))\n",
     "model.compile(loss='mean_squared_error', optimizer='adam')\n",
-    "model.fit(X_train, Y_train, epochs=100, batch_size=1, verbose=2)"
+    "\n",
+    "# Early stopping\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=5)\n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=100, batch_size=1, verbose=2, callbacks=[early_stopping], validation_split=0.3)"
    ]
   },
   {
@@ -404,6 +472,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate evaluation metrics\n",
+    "train_rmse = np.sqrt(mean_squared_error(Y_train[0], train_predict[:,0]))\n",
+    "train_mae = mean_absolute_error(Y_train[0], train_predict[:,0])\n",
+    "test_rmse = np.sqrt(mean_squared_error(Y_test[0], test_predict[:,0]))\n",
+    "test_mae = mean_absolute_error(Y_test[0], test_predict[:,0])\n",
+    "\n",
+    "# Print evaluation metrics\n",
+    "print(f'Training RMSE: {train_rmse:.2f}')\n",
+    "print(f'Training MAE: {train_mae:.2f}')\n",
+    "print(f'Test RMSE: {test_rmse:.2f}')\n",
+    "print(f'Test MAE: {test_mae:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plot baseline and predictions\n",
     "plt.figure(figsize=(12,6))\n",
     "plt.plot(scaler.inverse_transform(scaled_no2))\n",
@@ -413,8 +500,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
