docs: add documentation in the Jupyter Notebook

--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -264,6 +264,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(f'train_data count: {len(train_data)}')\n",
+    "print(f'test_data count: {len(train_data)}') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_data[0]"
    ]
   },
