docs: add documentation in Jupyter Notebooks

--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -219,17 +219,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data[0]\n",
-    "len(train_data[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(test_labels)"
+    "# Print the number of samples in the training dataset\n",
+    "print(f'Training data sample count: {len(train_data)}')\n",
+    "\n",
+    "# Print the number of samples in the testing dataset\n",
+    "print(f'Testing data sample count: {len(test_data)}')"
    ]
   },
   {
@@ -243,6 +237,7 @@
     "  - **Prevents Data Loss:** Padding avoids truncating longer sequences, which might lose important information.\n",
     "  - **Facilitates Embeddings:** In deep learning, fixed-length sequences streamline the creation of consistent-dimensional embeddings for text tokens.\n",
     "\n",
+    "- **Note:** We've limited our download to the top 10,000 most frequently used words, meaning some less common words in the movie reviews are not included. These words are represented as '<UNK>' in our data.\n",
     "\n",
     "- **tf.keras.preprocessing.sequence.pad_sequences:** To prepare the data, both the training and testing datasets are padded using a sequence length of 256, and any missing values are filled with zeros."
    ]
@@ -264,47 +259,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'train_data count: {len(train_data)}')\n",
-    "print(f'test_data count: {len(train_data)}') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "word_index = imdb.get_word_index()  # get {word: index}\n",
+    "# Print the number of samples in the padded training dataset\n",
+    "print(f'Padded training data sample count: {len(train_data)}')\n",
     "\n",
-    "# Offset by 3 as 0, 1, and 2 are reserved indices for \"padding\", \"start of sequence\", and \"unknown\"\n",
+    "# Print the number of samples in the padded testing dataset\n",
+    "print(f'Padded testing data sample count: {len(test_data)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the word indices from the first sample in the training dataset\n",
+    "print(train_data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_index = imdb.get_word_index()  # Retrieve a dictionary mapping words to their index numbers\n",
+    "\n",
+    "# Offset 3 from each index because the first three numbers (0, 1, and 2) are reserved for special markers: \n",
+    "# \"padding (<PAD>),\" \"start of sequence (<START>),\" and \"unknown (<UNK>).\"\n",
     "index_word = {v + 3: k for k, v in word_index.items()}\n",
     "\n",
-    "# The first index is 1 for \"start of sequence\". Also add the reserved words to the dictionary.\n",
+    "# The mapping of indices to words from the index_word dictionary\n",
+    "# print(index_word)\n",
+    "\n",
+    "# Set the first index to 1 to indicate the beginning of a sequence and include reserved words in the dictionary\n",
     "index_word[0] = '<PAD>'\n",
     "index_word[1] = '<START>'\n",
     "index_word[2] = '<UNK>'\n",
     "\n",
+    "# Create a dictionary to convert numeric indices back to words\n",
     "index = 0\n",
     "print(\" \".join([index_word.get(idx, '?') for idx in train_data[index]]))\n",
+    "\n",
+    "# Map output 'positive' if the training label at the given index is 1, otherwise output 'negative'\n",
     "print(\"positive\" if train_labels[index] == 1 else \"negative\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index_word"
    ]
   },
   {
@@ -312,10 +309,11 @@
    "metadata": {},
    "source": [
     "- **The model is constructed with:**\n",
-    "  - An embedding layer (input vocabulary: 10,000, embedding size: 16).\n",
-    "  - A global average pooling layer to reduce the sequence dimension.\n",
-    "  - A 16-unit dense layer with ReLU activation.\n",
-    "  - A single-unit dense layer with sigmoid activation for binary classification.\n",
+    "  - The model uses 25,000 samples each for training and testing.\n",
+    "  - It includes an embedding layer for a 10,000-word vocabulary with each word represented by a 16-dimensional vector.\n",
+    "  - A global average pooling layer is applied to simplify the data by averaging over the sequence.\n",
+    "  - There is a dense layer with 16 neurons using ReLU activation.\n",
+    "  - The output layer is a single neuron with sigmoid activation, used for binary (positive/negative) classification.\n",
     "\n",
     "- As for training, it is configured with the **'adam'** optimizer, using **'binary_crossentropy'** as the loss function, and tracking **'accuracy'** as a performance metric.\n",
     "- The **ReLU (Rectified Linear Unit)** activation function is used. It outputs the input value if it's positive, and zero if it's negative This introduces non-linearity to the model and helps in mitigating gradient vanishing issues."
@@ -330,8 +328,7 @@
     "# Build the model\n",
     "model = Sequential([\n",
     "  Embedding(10000, 16),\n",
-    "  # It simply compresses the sequence of data into a single vector (per sample) by averaging.\n",
-    "  GlobalAveragePooling1D(),\n",
+    "  GlobalAveragePooling1D(),      # It simply compresses the sequence of data into a single vector (per sample) by averaging\n",
     "  Dense(16, activation='relu'),  # 2 Hidden Layers\n",
     "  Dense(1, activation='sigmoid') # 1 Output Layer\n",
     "])\n",
