--- a/MLDLAssignments.ipynb
+++ b/MLDLAssignments.ipynb
@@ -454,6 +454,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **scaler.inverse_transform:** It is used to convert the model's predictions and target values back to their original units after they were scaled during preprocessing. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
